index.css
* {
	box-sizing: border-box;
	margin: 0px;
	padding: 0px;
	font-family: '微軟正黑體', 'Arial';
}


header {
	width: 100vw;
	height: 100vh;
	background-image: url('header_bg.jpeg');
	background-size: cover;
}

.header-hover {
	width: 100vw;
	height: 100vh;
	position: absolute;
	top: 0px;
	left: 0px;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+25,555555+75,000000+100&1+0,0+0,1+100 */
	background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 40%, rgba(85,85,85,0.50) 50%, rgba(85,85,85,0.75) 75%, rgba(17,17,17,1) 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 40%, rgba(85,85,85,0.50) 50%, rgba(85,85,85,0.75) 75%,rgba(17,17,17,1) 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 40%, rgba(85,85,85,0.50) 50%, rgba(85,85,85,0.75) 75%,rgba(17,17,17,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}

.grid-2 {
	width: 50%;
	height: 100%;
	float: left;
	display: inline-block;
}

.both-center {
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.desc {
	width: 75%;
	color: white;
	font-size: 18px;
	line-height: 27px;
	z-index: 99;
}

.desc::first-letter {
	color: #66F0FC;
	font-size: 36px;
	margin-right: 8px;
	vertical-align: middle;
}

.crossline {
	width: 100px;
	height: 100px;
	position: absolute;
	right: 3%;
}

.area {
	width: 100vw;
	height: 100vh;
}

.area > .title {
	width: 75vw;
	height: 20vh;
	margin: 0 auto;
	font-size: 5vw;
	text-align: center;
	line-height: 20vh;
	border-bottom: 5px dotted;
	font-family: 'Source Sans Pro', sans-serif;
}

.area > .content {
	width: 60vw;
	height: 80vh;
	margin: 0 auto;
	font-size: 1.25vw;
	font-family: 'Source Serif Pro', serif;
	letter-spacing: 0.1vw;	
}

.area > .content > .list {
	display: inline-block;
	height: auto;
	padding-top: 3vh;
	padding-bottom: 3vh;
}
.area > .content > .list ul {
	list-style: none;
}

.area > .content > .list ul li {
	padding-bottom: 1.5vh;
}

.fa {
	margin-right: 5px;
	margin-left: 5px;
}

.area > .content > .list > .icon {
	width: 20vw;
	margin: 0 auto;
	float: left;
	cursor: default;
}

.area > .content > .list > .info {
	width: 40vw;
	float: left;
	cursor: default;
	letter-spacing: calc(0.1vw + 2px );
}

footer {
	width: 100vw;
	background-color: #000;
	color: #fff;
}

footer .profile {
	width: 100vw;
	height: 30vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

footer .name {
	width: 100vw;
	height: 20vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

footer p {
	font-size: 4vw;
	letter-spacing: 0.1vw;
	font-family: 'Source Sans Pro', sans-serif;
}

footer img {
	height: 20vh;
	filter: brightness(0) invert(1);;
	-webkit-filter: brightness(0) invert(1);;
}



header img {
	z-index: 99;
}

@media screen and (max-width: 960px),  screen and (max-device-width: 960px){
	
	.header-hover {
		background: rgba(75, 75, 75, 0.75);
	}

	.grid-2 {
		display: none;
	}
	
	.small-grid-1 {
		width: 100%;
		height: 100%;
		float: left;
		display: inline-block;
	}

	.area > .title { 
		width: 90vw;
	}
	
	.area > .content {
		width: 80vw;
	}

	.area > .content > .list > .icon {
		width: 35vw;
	}

	.area > .content > .list > .info {
		width: 45vw;
	}
}

